--- a/LessonHomeWork1/index.html
+++ b/LessonHomeWork1/index.html
@@ -13,25 +13,18 @@ cd<!DOCTYPE html>
             text-align: center;
             font-weight: bolder;
         }
-    </style>
-    <style>
         h1{
             text-align: center;
-            
         }
-    </style>
-    <style>
         footer{
-            text-align: right;
-        }
+            text-align:right ;        }
     </style>
 </head>
 <body>
     <h1>Program training</h1>
     <p class="note">This program is for confident visitors </p>
-
-    <ul>
-        <li><a href="https://www.youtube.com/shorts/9SdwTIG6hJY">Bench press</a></li>
+            <ul>
+            <li><a href="https://www.youtube.com/shorts/9SdwTIG6hJY">Bench press</a></li>
          <li><a href="https://www.youtube.com/shorts/gslEzVggur8">Barbell squat</li>
             <li><a href="https://www.youtube.com/shorts/I_zPImtFV34">Jvm press</a></li>
     </ul>
