--- a/HomeWork2/index.html
+++ b/HomeWork2/index.html
@@ -39,18 +39,22 @@
         <br /><br />
         <label for="Password"></label>
         <input
-          style="background: transparent; border: none"
-          placeholder="Password"
-          type="password"
+          style="background: transparent; border: none color"
+          placeholder="Password "
+          type="Password"
         />
         <br /><br />
         <label for="date"></label>
         <input
-          style="background: transparent; border: none"
+          style="background: transparent; color: white; border: none"
           type="date"
           type="date"
         />
-        <select style="background: transparent; border: none" name="" id="">
+        <select
+          style="background: transparent; color: white; border: none"
+          name=""
+          id=""
+        >
           <option value="English">English</option>
           <option value="Ukrainian">Ukrainian</option>
           <option value="French">French</option>
