--- a/HomeWork2/index.html
+++ b/HomeWork2/index.html
@@ -17,14 +17,14 @@
         <br /><br />
         <label for="Your name"></label>
         <input
-          style="background: transparent; border: none"
+          style="background: transparent;color: white; border: none"
           placeholder="Your name"
           type="text"
         />
         <br /><br />
         <label for="email"></label>
         <input
-          style="background: transparent; border: none"
+          style="background: transparent;color: white; border: none"
           placeholder="Email"
           id="email"
           type="email"
@@ -32,14 +32,14 @@
         <br /><br />
         <label for="Your Message"></label>
         <input
-          style="background: transparent; border: none"
+          style="background: transparent;color: white; border: none"
           placeholder="Your Message"
           type="text"
         />
         <br /><br />
         <label for="Password"></label>
         <input
-          style="background: transparent; border: none color"
+          style="background: transparent;color: white; border: none"
           placeholder="Password "
           type="Password"
         />
@@ -60,8 +60,7 @@
           <option value="French">French</option>
         </select>
         <br /><br />
-
-        <input style="float: left" type="submit" value="submit" />
+        <button style="float: left;" id="submit-btn">Submit form></form></button>
       </form>
     </div>
   </body>
