--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -1,112 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="./index.css" />
-  </head>
-  <body>
-    <div class="container">
-      <header class="header">
-        <div>
-          <img src="./images/Britlex.svg" alt="Britlex-logo" />
+    <head>
+        <meta charset="utf-8" />
+        <title>Classwork-4</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="./styles/index.css" />
+    </head>
+    <body>
+        <div class="container">
+            <header class="header">
+                <div>
+                    <img src="./images/Britlex.svg" alt="Britlex-logo" />
+                </div>
+                <nav class="header-nav">
+                    <ul>
+                        <li>Home</li>
+                        <li>Skills</li>
+                        <li>About Us</li>
+                        <li>Pricing</li>
+                        <li>Contacts</li>
+                    </ul>
+                </nav>
+                <button class="header-btn">Let's talk</button>
+            </header>
+            <main>
+                <section class="header-content">
+                    <div class="header-info">
+                        <h1 class="header-title">Learn Any Foreign Language</h1>
+                        <p class="header-subtitle">
+                            With our teachers who write a program for each student, you will be able
+                            to make your first sketch after the first lesson.
+                        </p>
+                        <button class="header-content-btn">Get started</button>
+                    </div>
+                    <div class="header-img">
+                        <img src="./images/Learning-language-bro.jpg" alt="Learning-language-bro" />
+                    </div>
+                </section>
+                <section class="skills-section">
+                    <h1 class="skills-title">Skills</h1>
+                    <div class="flex-wrapper-row">
+                        <div class="left-item item">
+                            <img
+                                class="item-image"
+                                src="./images/Shared-goals-bro-1.svg"
+                                alt="Person"
+                            />
+                            <div class="item-info">
+                                <h2 class="item-title">Speaking</h2>
+                                <p class="item-description">
+                                    Improve your English skills and confidence. Live classes and
+                                    interactive lessons online. 20% extra free for a limited time
+                                    only<br /><br />Learn English online and improve your skills
+                                    through our high-quality courses and resources – all designed
+                                    for adult language learners.
+                                </p>
+                                <button class="item-btn">Learn more</button>
+                            </div>
+                        </div>
+                        <div class="right-section">
+                            <div class="right-top-section">
+                                <div class="top-left-item item">
+                                    <div class="img">
+                                        <img
+                                            class="item-image"
+                                            src="./images/Typewriter-bro-1.svg"
+                                            alt="Person"
+                                        />
+                                    </div>
+                                    <div class="item-info">
+                                        <h2 class="item-title">Writing</h2>
+                                        <p class="item-description">
+                                            One of the most important and extensive areas of natural
+                                            science, the science that studies substances, also their
+                                            composition
+                                        </p>
+                                        <button class="item-btn">Learn more</button>
+                                    </div>
+                                </div>
+                                <div class="top-right-item item">
+                                    <div class="img">
+                                        <img
+                                            class="item-image"
+                                            src="./images/House-bookshelves-bro-1.svg"
+                                            alt="Person"
+                                        />
+                                    </div>
+                                    <div class="item-info">
+                                        <h2 class="item-title">Reading</h2>
+                                        <p class="item-description">
+                                            Perception and response actions of the user resulting
+                                            from the use and/or upcoming use of the product, system
+                                            or service
+                                        </p>
+                                        <button class="item-btn">Learn more</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-bottom-section">
+                                <div class="bottom-item item">
+                                    <img
+                                        class="item-image"
+                                        src="./images/Podcast-audience-bro-1.svg"
+                                        alt="Person"
+                                    />
+                                    <div class="item-info">
+                                        <h2 class="item-title">Listening</h2>
+                                        <p class="item-description">
+                                            Here you can find activities to practise your listening
+                                            skills. Listening will help you to improve your
+                                            understanding
+                                        </p>
+                                        <button class="item-btn">Learn more</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- <div class="right-section">
+                                <div class="left-item">
+                                    <img
+                                        class="item-image"
+                                        src="./images/Typewriter-bro-1.svg"
+                                        alt="Person"
+                                    />
+                                    <div class="item-info">
+                                        <h2 class="item-title">Writing</h2>
+                                        <p class="item-description">
+                                            One of the most important and extensive areas of natural
+                                            science, the science that studies substances, also their
+                                            composition
+                                        </p>
+                                        <button class="item-btn">Learn more</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="right-section">
+                                <div class="left-item">
+                                    <img
+                                        class="item-image"
+                                        src="./images/House-bookshelves-bro-1.svg"
+                                        alt="Person"
+                                    />
+                                    <div class="item-info">
+                                        <h2 class="item-title">Reading</h2>
+                                        <p class="item-description">
+                                            Perception and response actions of the user resulting from
+                                            the use and/or upcoming use of the product, system or
+                                            service
+                                        </p>
+                                        <button class="item-btn">Learn more</button>
+                                    </div>
+                                </div>
+                            </div> -->
+                        </div>
+                    </div>
+                </section>
+            </main>
         </div>
-        <nav class="header- nav">
-          <ul>
-            <li>Home</li>
-            <li>Skils</li>
-            <li>About Us</li>
-            <li>Pricing</li>
-            <li>Contackts</li>
-          </ul>
-        </nav>
-        <button class="header-btn">Let's talk</button>
-      </header>
-      <main>
-        <section class="header-content">
-          <div>
-            <h1 class="header-title">
-              Learm <br />
-              Any Foreign <br />
-              Language
-            </h1>
-            <p class="header-subtitle">
-              With our teachers who write a program for each student, you will
-              be able to make your first sketch after the first lesson.
-            </p>
-            <button class="header-content-btn">Get started</button>
-          </div>
-          <div>
-            <img
-              class="responsive"
-              src="./images/Learning-languages-bro.png"
-              alt=""
-            />
-          </div>
-        </section>
-        <section class="skills-section">
-          <h1 class="skills-title">Skills</h1>
-          <div class="flex-wrapper-row">
-            <div class="left-item">
-              <img
-                class="item-image"
-                src="./images/Shared-goals-bro-1.svg"
-                alt="Person"
-              />
-              <div class="left-item-margin">
-                <h2 class="item-title">Speaking</h2>
-                <p class="item-description">
-                  Improve your English skills and confidence. Live classes and
-                  interactive lessons online. 20% extra free for a limited time
-                  only Learn English online and improve your skills through our
-                  high-quality courses and resources – all designed for adult
-                  language learners.
-                </p>
-                <button class="item-button">Learm more</button>
-              </div>
-            </div>
-            <div class="right-top-section">
-              <div class="left-item">
-                <img
-                  class="item-image"
-                  src="./images/Typewriter-bro-1.svg"
-                  alt="Person"
-                />
-                <div class="left-item-margin">
-                  <h2 class="item-title">Writing</h2>
-                  <p class="item-description">
-                    One of the most important and extensive areas of natural
-                    science, the science that studies substances, also their
-                    composition
-                  </p>
-                  <button class="item-button">Learm more</button>
-                </div>
-              </div>
-            </div>
-            <div class="right-top-section">
-              <div class="left-item">
-                <img
-                  class="item-image"
-                  src="./images/House-bookshelves-bro-1.svg"
-                  alt="Person"
-                />
-                <div class="left-item-margin">
-                  <h2 class="item-title">Reading</h2>
-                  <p class="item-description">
-                    perception and response
-actions of the user resulting
-from the use and/or up
-coming use of the product, 
-system or service
-                  </p>
-                  <button class="item-button">Learm more</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
-    </div>
-  </body>
+    </body>
 </html>
